fix img gallery on safari

--- a/src/style/components/gallery.scss
+++ b/src/style/components/gallery.scss
@@ -2,7 +2,7 @@
     width: 100%;
     height: 90vh;
     background-size: cover;
-    background-attachment: fixed;
+    // background-attachment: fixed;
     background-repeat: no-repeat;
     background-position: center center;
 }
@@ -20,9 +20,9 @@
         display: none;
     }
 }
+
 @media only screen and (min-width: $my-small-break-point) {
     #go-to-studio-button-mobile-container {
         display: none;
     }
 }
-
